<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingLeft="18dp"
android:paddingRight="18dp"
android:orientation="vertical" >
<EditText
    android:id="@+id/placeEditText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="Place" />
<EditText
    android:id="@+id/languageEditText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="Language" />
    <EditText
        android:id="@+id/maxrowsEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Rows" />

        <ListView
            android:id="@+id/listViewResult"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="top"
    />
<Button
    android:id="@+id/button"
    android:layout_width="100dp"
    android:layout_height="wrap_content"
    android:layout_gravity="right"
    android:text="send" />
</LinearLayout>